<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:id="@+id/main_root">

	<!-- Tabs -->
	<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@android:id/tabhost" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_below="@+id/main_top_bit"
		android:layout_above="@+id/main_bottom_bit">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<TabWidget android:id="@android:id/tabs"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			<FrameLayout android:id="@android:id/tabcontent"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@color/black">


				<LinearLayout android:id="@+id/main_ll_get_info"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:fillViewport="true">

					<TableLayout android:id="@+id/main_table_cell_info"
						style="@style/asset_info_table_layout" android:background="@color/table_background">
						<TableRow android:id="@+id/row1">
							<TextView android:id="@+id/label_select" style="@style/title_field"
								android:text="@string/label_select_location" />
						</TableRow>
						<TableRow android:id="@+id/row2">
							<Spinner android:id="@+id/locations_types_spinner"
								android:layout_height="wrap_content" android:layout_width="wrap_content"
								android:prompt="@string/locations_types_spinner" />

							<Button android:layout_gravity="fill_vertical"
								android:layout_height="fill_parent" android:layout_width="fill_parent"
								android:text="@string/label_search_btn" android:id="@+id/btnSearch"
								android:layout_weight="1" />

						</TableRow>
						<TableRow android:id="@+id/row3">
							<TextView android:id="@+id/label_search" style="@style/title_field"
								android:text="@string/label_search_location" />
						</TableRow>
						<TableRow android:id="@+id/row4">
							<EditText style="@style/data_text_edit" android:id="@+id/editRoomName" />
						</TableRow>
						<TableRow android:gravity="center_horizontal" android:id="@+id/row5">
							<Button android:layout_height="fill_parent"
								android:layout_width="fill_parent" android:text="@string/label_hide"
								android:id="@+id/btnShowHide" android:layout_weight="1" />
						</TableRow>

						<ListView android:id="@+id/result_list" android:divider="@color/table_background"
							android:dividerHeight="3dp" android:layout_width="fill_parent"

							android:layout_height="fill_parent" android:background="@color/black"
							android:cacheColorHint="#00000000" />
						<Button android:layout_height="fill_parent"
							android:layout_width="fill_parent" android:text="@string/label_back_btn"
							android:id="@+id/btnBack" android:visibility="gone" />
					</TableLayout>
				</LinearLayout>

				<ScrollView android:id="@+id/main_scrollview_location_info"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:fillViewport="true">
					<TableLayout android:id="@+id/main_table_location_info"
						style="@style/asset_info_table_layout">
					</TableLayout>
				</ScrollView>
			</FrameLayout>


			<LinearLayout android:id="@+id/layoutdetailsTable"

				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:fillViewport="true" android:visibility="gone">


				<ScrollView android:id="@+id/detailsTable_scrollview"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:fillViewport="true">

					<!--DETAILS TABLE-->
					<TableLayout android:id="@+id/detailsTable"
						style="@style/asset_info_table_layout">

						<TableRow android:visibility="gone">
							<TextView android:text="Location id: "
								android:layout_height="wrap_content" style="@style/result_title_field" />
							<TextView android:id="@+id/location_id_dtbl" style="@style/result_data_field" />
						</TableRow>

						<TableRow android:background="@color/white">
							<ImageView android:id="@+id/imagelogo" android:src="@drawable/uniessexlogo"
								android:layout_width="wrap_content" android:layout_height="wrap_content"
								android:layout_gravity="left" />

						</TableRow>

						<TableRow>
							<TextView android:text="Location: "
								android:layout_height="wrap_content" style="@style/result_title_field" />
						</TableRow>
						<TableRow>
							<TextView android:id="@+id/location_name_dtbl" style="@style/result_data_field"
								android:text="n/a" />
						</TableRow>


						<TableRow>
							<TextView android:text="Location Alternative name: "
								android:layout_height="wrap_content" style="@style/result_title_field" />
						</TableRow>
						<TableRow>
							<TextView android:id="@+id/location_altname_dtbl" style="@style/result_data_field"
								android:text="n/a" />
						</TableRow>


						<TableRow>
							<TextView android:text="Location Disabled Access: "
								android:layout_height="wrap_content" style="@style/result_title_field" />
						</TableRow>
						<TableRow>
							<TextView android:id="@+id/location_disabledaccess_dtbl"
								style="@style/result_data_field" android:text="n/a" />
						</TableRow>


						<TableRow>
							<TextView android:text="Location AV Type: "
								android:layout_height="wrap_content" style="@style/result_title_field" />
						</TableRow>
						<TableRow>
							<TextView android:id="@+id/location_avtype_dtbl" style="@style/result_data_field"
								android:text="n/a" />
						</TableRow>


						<TableRow>
							<TextView android:text="Location Navigation: "
								android:layout_height="wrap_content" style="@style/result_title_field" />
						</TableRow>
						<TableRow>
							<TextView android:id="@+id/location_info_dtbl" style="@style/result_data_field"
								android:text="n/a" />
						</TableRow>


						<TableRow>
							<TextView android:text="Location Notes: "
								android:layout_height="wrap_content" style="@style/result_title_field" />
						</TableRow>
						<TableRow>
							<TextView android:id="@+id/location_notes_dtbl" style="@style/result_data_field"
								android:text="n/a" />
						</TableRow>


						<TableRow android:visibility="gone">
							<TextView android:text="Location latit: "
								android:layout_height="wrap_content" style="@style/result_title_field" />
							<TextView android:id="@+id/location_latit_dtbl" style="@style/result_data_field"
								android:text="n/a" android:visibility="gone" />
						</TableRow>

						<TableRow android:visibility="gone">
							<TextView android:text="Location longtit: "
								android:layout_height="wrap_content" style="@style/result_title_field" />
							<TextView android:id="@+id/location_longtit_dtbl" style="@style/result_data_field"
								android:text="n/a" android:visibility="gone" />
						</TableRow>

					</TableLayout>

				</ScrollView>

			</LinearLayout>


		</LinearLayout>

	</TabHost>
</RelativeLayout> 